# bio-overlay

./: .gitignore  README.md  config.example.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: design.md  development.md  mac-setup.md  source-summary.md
overlay/: config.css  config.html  config.js  history.css  history.html  history.js  index.html  overlay.css  overlay.js
packaging/: bio-overlay.spec  icon.icns  run_bio_overlay.py
src/bio_overlay/: __init__.py  ble_collector.py  cli.py  config.py  history.py  hr_parser.py  paths.py  respiration.py  server.py  simulator.py  telemetry.py
tests/: test_config.py  test_history.py  test_hr_parser.py  test_respiration.py  test_telemetry.py
