[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bio-overlay"
version = "1.1.2"
description = "Live heart-rate video overlay for remote training sessions"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Mike Koss", email = "mckoss@gmail.com" }]
dependencies = [
    "bleak>=0.22",
    "aiohttp>=3.9",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
package = [
    "pyinstaller>=6.0",
]

[project.scripts]
bio-overlay = "bio_overlay.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
